--- a/package.json
+++ b/package.json
@@ -27,31 +27,31 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/exec": "^1.0.4",
-    "@actions/github": "^3.0.0",
-    "@actions/glob": "^0.1.0",
+    "@actions/github": "^4.0.0",
+    "@actions/glob": "^0.1.1",
     "@actions/io": "^1.0.2",
     "@octokit/rest": "latest",
-    "@types/html-to-text": "^5.1.1",
-    "fast-xml-parser": "^3.17.4",
+    "@types/html-to-text": "^6.0.0",
+    "fast-xml-parser": "^3.18.0",
     "html-to-text": "latest",
-    "ramda": "^0.27.0",
+    "ramda": "^0.27.1",
     "unescape": "latest"
   },
   "devDependencies": {
-    "@types/istanbul-lib-report": "^3.0.0",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^12.20.25",
-    "@types/ramda": "^0.27.6",
-    "@typescript-eslint/parser": "^4.28.3",
-    "@vercel/ncc": "^0.29.0",
-    "eslint": "^7.31.0",
-    "eslint-plugin-github": "^4.3.0",
-    "eslint-plugin-jest": "^24.3.6",
-    "jest": "^27.0.6",
-    "jest-circus": "^27.0.6",
-    "js-yaml": "^4.1.0",
-    "prettier": "2.2.1",
-    "ts-jest": "^27.0.4",
-    "typescript": "^4.3"
+    "@octokit/core": "^3.2.5",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^12.12.6",
+    "@types/ramda": "^0.27.38",
+    "@typescript-eslint/parser": "^4.15.0",
+    "@zeit/ncc": "^0.20.5",
+    "eslint": "^6.8.0",
+    "eslint-plugin-github": "^4.1.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "jest": "^26.6.3",
+    "jest-circus": "^26.6.3",
+    "js-yaml": "^4.0.0",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.5.1",
+    "typescript": "^4.1.5"
   }
 }
