--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
     "plugins": ["jest", "@typescript-eslint"],
-    "extends": ["plugin:github/recommended"],
+    "extends": ["plugin:github/typescript"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
       "ecmaVersion": 9,
@@ -16,11 +16,38 @@
       "@typescript-eslint/no-require-imports": "error",
       "@typescript-eslint/array-type": "error",
       "@typescript-eslint/await-thenable": "error",
-      "@typescript-eslint/ban-ts-comment": "error",
+      "@typescript-eslint/ban-ts-comment": [
+        "error",
+        {
+          "ts-expect-error": "allow-with-description",
+          "ts-ignore": true,
+          "ts-nocheck": true,
+          "ts-check": false,
+          "minimumDescriptionLength": 5
+        }
+      ],
       "camelcase": "off",
+      "@typescript-eslint/camelcase": "off",
       "@typescript-eslint/consistent-type-assertions": "error",
       "@typescript-eslint/explicit-function-return-type": ["error", {"allowExpressions": true}],
       "@typescript-eslint/func-call-spacing": ["error", "never"],
+      "@typescript-eslint/naming-convention": [
+        "error",
+        { 
+          "selector": "variable", 
+          "format": ["camelCase", "UPPER_CASE"]
+        },
+//        {
+//          "selector": "variable",
+//          "modifiers": ["const"],
+//          "format": ["UPPER_CASE"]
+//        },
+        {
+          "selector": "typeParameter",
+          "format": ["PascalCase"],
+          "prefix": ["T"]
+        }
+      ],
       "@typescript-eslint/no-array-constructor": "error",
       "@typescript-eslint/no-empty-interface": "error",
       "@typescript-eslint/no-explicit-any": "error",
