--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node",
     "setup"
   ],
-  "author": "",
+  "author": "Luke Collins",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.1",
